--- a/src/index.css
+++ b/src/index.css
@@ -344,3 +344,22 @@ body {
     max-width: 100%;
   }
 }
+@media only screen and (max-width: 375px) {
+  .products {
+    width: 375px;
+  }
+
+  .footer ul {
+    gap: 30px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .products {
+    width: 320px;
+  }
+
+  .footer ul li a {
+    font-size: 48px;
+  }
+}
